# Vriddhi_Cap

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  license.txt  pyproject.toml
vriddhi_capital/: commands.py  hooks.py  install.py  modules.txt  notifications.py  patches.txt
vriddhi_capital/api/: dashboard.py
vriddhi_capital/doctype/budget_line/: budget_line.json  budget_line.py
vriddhi_capital/doctype/vriddhi_settings/: vriddhi_settings.json
vriddhi_capital/page/vriddhi_capital/: vriddhi_capital.js  vriddhi_capital.json
vriddhi_capital/public/css/: vriddhi_dashboard.css  vriddhi_dashboard_fast.css
vriddhi_capital/public/js/: vriddhi_shell.js  vriddhi_shell_fast.js  vriddhi_shell_final.js  vriddhi_web.js
vriddhi_capital/setup/: seed.py
vriddhi_capital/vriddhi_capital/doctype/bank_import_entry/: bank_import_entry.json  bank_import_entry.py
vriddhi_capital/vriddhi_capital/doctype/notification_trigger_log/: notification_trigger_log.json  notification_trigger_log.py
vriddhi_capital/vriddhi_capital/doctype/vriddhi_settings/: vriddhi_settings.py
vriddhi_capital/vriddhi_capital/page/vriddhi_capital/: vriddhi_capital.js
